--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
+</html>
+<!DOCTYPE html>
 <html>
+<head>
+	<title>Подготовлено для второго коммита</title>
+	
+</head>
+<body>
 
-<p>новое изменение</p>
-
+</body>
 </html>
