--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <html>
 <head>
 	<title>Подготовлено для второго коммита</title>
-	Добавляем еще текст
+
+	фывфыв фывфывфы фывфывфывфыв фывфыв фывфывфв
 
 </head>
 <body>
 
 </body>
-</html>
+</html>фывфывфыв фывафыв фывфыв
