Вместе с стилями -красный фон

--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Подготовлено для второго коммита</title>
-
-	фывфыв фывфывфы фывфывфывфыв фывфыв фывфывфв
+    <title>Подготовлено для второго коммита</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <!--<link rel="stylesheet" sizes="css/style.css"> -->
 
 </head>
 <body>
+Всякий там текст...
 
 </body>
-</html>фывфывфыв фывафыв фывфыв
+</html>
